# backend

./: .gitignore  ARCHITECTURE.md  CRUD_COMPLETO.md  DAILY_CHALLENGES_README.md  README.md  alembic.ini  check_columns.py  docker-compose.yml  fix_current_value.py  fix_id_column.py  init_daily_challenges.py  init_data.py  init_db.py  init_mysql_data.py  init_retos.py  main.py  migration_daily_challenges.py  modify_reto_columns.py  mysql_config.py  pyproject.toml  requirements.txt  run.py  start.py  test_db.py  update_categories.py  update_table.py
alembic/: env.py
alembic/versions/: 13da8fe234e3_add_remaining_models_with_varchar_.py  20251016_change_reto_text_fields.py  20251016_modify_reto_text.py  5c0ea00fc4d9_set_current_value_not_null.py  add_categoria_column.py  add_categoria_to_reto.py  modify_reto_text_columns.py
app/: __init__.py  database.py
app/core/: config.py  deps.py  security.py
app/crud/: challenge.py  criterio.py  daily_challenge.py  habit.py  logro.py  progress.py  reto.py  user.py
app/models/: database.py
app/routers/: auth.py  category_stats.py  challenges.py  criterios.py  daily_challenges.py  daily_retos.py  habits.py  logros.py  progress.py  retos.py  users.py
app/schemas/: auth.py  challenge.py  challenge_progress.py  criterio.py  daily_challenge.py  daily_progress.py  habit.py  logro.py  progress.py  reto.py  user.py
app/services/: category_stats_service.py  notifications.py  progress_service.py  reto_service.py  scheduler.py
docs/: retos_categorias.md
migrations/: add_categoria.sql  modify_reto_columns.sql
tests/: test_main.py
